<resources>
    <string name="app_name">MangaH</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="clock">Ranking</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="web_name">Nettruyen</string>
    <string name="manga_new">Manga new</string>
    <string name="manga_male">Manga boy</string>
    <string name="manga_female">Manga girl</string>
    <string name="search">Search</string>
    <string name="gender">Gender</string>
    <string name="recommend_for_you">Recommend for you</string>
</resources>
