<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/category"
        android:icon="@drawable/ic_baseline_widgets_24"
        android:title="@string/category" />

    <item
        android:id="@+id/ranking"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/clock" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_baseline_settings_applications_24"
        android:title="@string/setting" />
</menu>